DSH: change j.n.URL to j.n.URI to avoid DNS lookup
Surprisingly, java.net.URL invokes an external DNS lookup when comparing
URLs - url.equals(otherurl)

More information at
http://www.eishay.com/2008/04/javas-url-little-secret.html

This can result into significant delays when a DNS server involved is
unreachable.

Fix this by using java.net.URI instead.